@@ -1,3 +1,8 @@
+2001-12-07  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shpopen.c: Fix fclose() of SHX file if SHX file fails to open. 
+	Should be closing SHP file.  Reported by Ben Discoe.
+
 2001-11-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* dbfopen.c: two fixes for compiler warnings as suggested by
